Update README and .env.dist for v1.0.1

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,8 @@
 # VPN Server Configuration
-# Format: server_name:server_ip:username:password:shared_key
-VPN_SERVERS=server1:vpn1.example.com:user1:pass1:sharedkey1,server2:vpn2.example.com:user2:pass2:sharedkey2
+# Format: server_name:server_ip
+# Note: Only server name and IP are needed for connectivity testing in v1.0.1
+# Credentials are not required as we only test server reachability
+VPN_SERVERS=server1:vpn1.example.com,server2:vpn2.example.com,server3:192.168.1.100
 
 # MySQL Database Configuration
 DB_HOST=your-mysql-host.com
