Implement Docker-based VPN Monitor

--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,10 @@
 # VPN Server Configuration
-# Format: server_name:server_ip
-# Note: Only server name and IP are needed for connectivity testing in v1.0.1
-# Credentials are not required as we only test server reachability
+# Format for connectivity testing only: server_name:server_ip
+# Format for full tunnel testing: server_name:server_ip:username:password:shared_key
+# 
+# Examples:
+# Connectivity test only: server1:vpn1.example.com,server2:192.168.1.100
+# Full tunnel test: server1:vpn1.example.com:myuser:mypass:sharedsecret
 VPN_SERVERS=server1:vpn1.example.com,server2:vpn2.example.com,server3:192.168.1.100
 
 # MySQL Database Configuration
