Remove v1.0.1 connectivity-only code and features

--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,9 @@
 # VPN Server Configuration
-# Format for connectivity testing only: server_name:server_ip
-# Format for full tunnel testing: server_name:server_ip:username:password:shared_key
+# Format: server_name:server_ip:username:password:shared_key
 # 
 # Examples:
-# Connectivity test only: server1:vpn1.example.com,server2:192.168.1.100
-# Full tunnel test: server1:vpn1.example.com:myuser:mypass:sharedsecret
-VPN_SERVERS=server1:vpn1.example.com,server2:vpn2.example.com,server3:192.168.1.100
+# VPN_SERVERS=server1:vpn1.example.com:myuser:mypass:sharedsecret,server2:vpn2.example.com:user2:pass2:key2
+VPN_SERVERS=server1:vpn1.example.com:username:password:shared_key,server2:vpn2.example.com:username:password:shared_key
 
 # MySQL Database Configuration
 DB_HOST=your-mysql-host.com
@@ -18,4 +16,4 @@ DB_PASSWORD=your_db_password
 VPN_TIMEOUT=30
 
 # Optional: Custom identifier for this monitoring instance
-MONITOR_ID=
+MONITOR_ID=docker-monitor-01
