--- a/.env.dist
+++ b/.env.dist
@@ -15,5 +15,9 @@ DB_PASSWORD=your_db_password
 # Optional: Custom timeout for VPN connection tests (seconds)
 VPN_TIMEOUT=30
 
+# Optional: Polling interval for continuous monitoring (minutes)
+# Set to 0 to disable continuous mode and run once
+POLL_INTERVAL_MINUTES=5
+
 # Optional: Custom identifier for this monitoring instance
 MONITOR_ID=docker-monitor-01
