WSL2 VPN bypass with host networking and routing

--- a/.env.dist
+++ b/.env.dist
@@ -19,5 +19,11 @@ VPN_TIMEOUT=30
 # Set to 0 to disable continuous mode and run once
 POLL_INTERVAL_MINUTES=5
 
+# WSL2 VPN Bypass Configuration
+# Enable this if running in WSL2 while Windows host has VPN connection
+WSL2_BYPASS_VPN=true
+PHYSICAL_GATEWAY=192.168.100.1
+PHYSICAL_INTERFACE=eth0
+
 # Optional: Custom identifier for this monitoring instance
 MONITOR_ID=docker-monitor-01
