--- a/.env.dist
+++ b/.env.dist
@@ -19,11 +19,11 @@ VPN_TIMEOUT=30
 # Set to 0 to disable continuous mode and run once
 POLL_INTERVAL_MINUTES=5
 
-# WSL2 VPN Bypass Configuration
-# Enable this if running in WSL2 while Windows host has VPN connection
+# WSL2 + Windows VPN Configuration
+# Set to true to detect and warn about WSL2 + Windows VPN limitations
+# This provides guidance on how to get accurate VPN testing results
 WSL2_BYPASS_VPN=true
-PHYSICAL_GATEWAY=192.168.100.1
-PHYSICAL_INTERFACE=eth0
+PHYSICAL_GATEWAY=192.168.100.1  # Your Windows Wi-Fi gateway IP
 
 # Optional: Custom identifier for this monitoring instance
 MONITOR_ID=docker-monitor-01
